# random-recipes-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-ecs.yml  docker-compose.yml  ecs-params.yml  loader.py  pyproject.toml  server.py
.github/workflows/: aws.yml
app/: bot.py  callback_data_schema.py  callback_data_shema.py  callback_shema.py  conn.py  constants.py  db.py  exceptions.py  recipe_shema.py
app/data/: config.py  messages_text.py
app/gui/: layouts.py  markups.py
app/handlers/: __init__.py  callback_query_handlers.py  message_handlers.py
app/keyboards/: layouts.py  markups.py
refactored_app/: callback_shema.py  chat_gui_layouts.py  db.py  exceptions.py  recipe_shema.py  server.py
roadmap/: README.md
tests/: __init__.py  test_callback_data_schema.py  test_db.py
